<resources>
    <string name="app_name">YgoLifePoints</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lp_default">8000</string>
    <string name="increaseLp">+</string>
    <string name="decreaseLp">-</string>
    <string name="divideLp">/</string>
    <string name="settingsButton">Settings</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="coin_flip">Coin Flip</string>
    <string name="remove_dice">Remove Dice</string>
    <string name="add_dice">Add Dice</string>
    <string name="textview">TextView</string>
    <string name="log">Log</string>
    <string name="reset">Reset</string>
    <string name="decrease_the_total_number_of_coins_to_be_flipped">Decrease the total number of coins to be flipped</string>
    <string name="flip_all_of_the_coins">Flip all of the coins</string>
    <string name="increase_the_number_of_coins_to_be_flipped">Increase the number of coins to be flipped</string>
    <string name="decrease_the_total_number_of_dice_to_be_rolled">Decrease the total number of dice to be rolled</string>
    <string name="roll_all_of_the_dice">Roll all of the dice</string>
    <string name="increase_the_number_of_dice_to_be_rolled">Increase the number of dice to be rolled</string>
    <string name="button_to_flip_coins">Button to flip coins</string>
    <string name="button_to_roll_dice">Button to roll dice</string>
    <string name="button_to_go_to_settings">Button to go to settings</string>
    <string name="button_to_view_log">Button to view log</string>
</resources>