<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/life_point_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/playerOneLpDisplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center|center_horizontal"
            android:keepScreenOn="true"
            android:rotationX="0"
            android:selectAllOnFocus="false"
            android:text="@string/lp_default"
            android:textAlignment="center"
            android:textColor="#26FF00"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coin_flip_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_flip_coins"
                app:srcCompat="@drawable/flip_coin_button" />

            <ImageView
                android:id="@+id/dice_roll_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_roll_dice"
                app:srcCompat="@drawable/roll_dice_button" />

            <ImageView
                android:id="@+id/options_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_go_to_settings"
                app:srcCompat="@drawable/settings_button" />

            <ImageView
                android:id="@+id/display_log_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_view_log"
                app:srcCompat="@drawable/log_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/playerTwoLpDisplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center|center_horizontal"
            android:keepScreenOn="true"
            android:outlineProvider="background"
            android:rotation="0"
            android:selectAllOnFocus="false"
            android:text="@string/lp_default"
            android:textAlignment="center"
            android:textColor="#FD0000"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>