<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:focusable="auto"
    android:focusableInTouchMode="true"
    android:rotation="0"
    android:rotationX="0"
    android:rotationY="0"
    android:touchscreenBlocksFocus="false"
    tools:context=".FullscreenActivity">
    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:id="@+id/life_point_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playerOneLpDisplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center|center_horizontal"
            android:keepScreenOn="true"
            android:rotationX="0"
            android:selectAllOnFocus="false"
            android:text="@string/lp_default"
            android:textAlignment="center"
            android:textColor="#E8E8E8"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coin_flip_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_flip_coins"
                app:srcCompat="@drawable/flip_coin_button" />

            <ImageView
                android:id="@+id/dice_roll_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_roll_dice"
                app:srcCompat="@drawable/roll_dice_button" />

            <ImageView
                android:id="@+id/options_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_go_to_settings"
                app:srcCompat="@drawable/settings_button" />

            <ImageView
                android:id="@+id/display_log_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_view_log"
                app:srcCompat="@drawable/log_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/playerTwoLpDisplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center|center_horizontal"
            android:keepScreenOn="true"
            android:outlineProvider="background"
            android:rotation="0"
            android:selectAllOnFocus="false"
            android:text="@string/lp_default"
            android:textAlignment="center"
            android:textColor="#FD0000"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:paddingTop="1000dp">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settingsButton" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>